# jobops-copilot

./: .env.example  .gitignore  EVALS.md  README.md  docker-compose.langfuse.yml  package-lock.json  package.json  tsconfig.base.json
services/agent/: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements-evals.txt  requirements-rag.txt  requirements.txt
services/agent/app/: __init__.py  auth.py  config.py  main.py  prompts.py  schemas.py
services/agent/app/agents/: mcp_tools.py  (+2 more)
services/agent/evals/: __init__.py  _ragas_compat.py  baseline.json  evidence.py  gate.py  noise.py  noise_report.json  noise_report.md  noise_report_hybrid.json  retrieval.py  retrieval_report.json  retrieval_report.md  run.py  thresholds.json
services/agent/tests/: conftest.py  test_agent_injection.py  test_agents.py  test_app_insights.py  test_assistant_chat.py  test_assistant_checkpointer.py  test_assistant_graph.py  test_assistant_stream.py  test_assistant_tracing.py  test_auth.py  test_endpoints.py  test_eval_evidence.py  test_eval_noise.py  test_evals.py  test_fusion.py  test_injection.py  test_mcp_tools.py  test_moderation.py  test_obs.py  test_outreach_injection.py  test_pii.py  test_provider.py  test_rag.py  test_rag_ingest_skip.py  test_rag_lexical_pgtest.py  test_rag_query.py  test_rerank.py  test_retrieval_eval.py  test_schemas.py  test_score_fit_resilience.py  test_telemetry.py  test_tracing.py
services/mcp/: README.md  api_client.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
services/mcp/tests/: test_tools.py
(+371 files in other folders)
