[project]
name = "jobops-mcp"
version = "0.1.0"
description = "JobOps Copilot MCP server (FastMCP) bridging the REST API."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
